samples/clusterpolicy/new-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: newpod
spec:
  #nodeSelector:
  #  kubernetes.io/hostname: ewsmaster2
  containers:
  - image: busybox:1.32.0
    name: newpod
    command: [ "sleep", "3600" ]
    resources:
      requests:
        memory: "1280Mi"
        cpu: "40m"
        ephemeral-storage: "5Mi"
      limits:
        memory: "1280Mi"
        cpu: "40m"
        ephemeral-storage: "5Mi"
    volumeMounts:
    - mountPath: /data
      name: data-volume
  volumes:
  - name: data-volume
    emptyDir: {}
