samples/clusterpolicy/old-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: oldpod
spec:
  containers:
  - image: busybox:1.32.0
    name: oldpod
    command: [ "sleep", "3600" ]
    resources:
      requests:
        memory: "1280Mi"
        cpu: "40m"
        ephemeral-storage: "5Mi"
      limits:
        memory: "1280Mi"
        cpu: "40m"
        ephemeral-storage: "5Mi"
    volumeMounts:
    - mountPath: /data
      name: data-volume
  volumes:
  - name: data-volume
    emptyDir: {}
