samples/clusterpolicy/test-log.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-log
spec:
  serviceAccountName: default
  containers:
  - image: busybox
    name: test-emptydir
    command: [ "sleep", "3600" ]
    securityContext:
      privileged: true
    volumeMounts:
    - name: operatorlog
      mountPath: /var/log/k8soperator
  volumes:
  - name: operatorlog
    hostPath: 
      path: /var/log/k8soperator
