samples/clusterpolicy/disallow_privileged.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-privileged
  annotations:
    policies.kyverno.io/category: Security
    policies.kyverno.io/description: Privileged containers are defined as any 
      container where the container uid 0 is mapped to the host’s uid 0. 
      A process within a privileged container can get unrestricted host access. 
      With `securityContext.allowPrivilegeEscalation` enabled, a process can 
      gain privileges from its parent. 
spec:
  validationFailureAction: enforce
  background: false
  rules:
  - name: validate-privileged
    match:
      resources:
        kinds:
        - Pod
    exclude:
      #resources:
      #  namespaces:
      #  - "kube-system"
      #  - "kyverno"
      #  - "kube-public"
      #  - "kube-node-lease"
      #  - "velero"
      #  - "logging"
      #  - "default"
      clusterRoles:
      - cluster-admin
    validate:
      message: "Privileged mode is not allowed. Set privileged to false"
      pattern:
        spec:
          containers:
          - =(securityContext):
              =(privileged): false
